<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background2"
    android:orientation="vertical"
    android:padding="5pt">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_rate" />

    <LinearLayout
        android:id="@+id/layResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btOkay"
            style="@style/BannerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay" />

        <Button
            android:id="@+id/btNo"
            style="@style/BannerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/layProgress"
        android:layout_width="match_parent"
        android:layout_height="12pt"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>
