<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
    tools:context=".fragments.OverviewFragment">

    <de.lorenzgorse.coopmobile.LoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/layError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtNoNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_network"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/update_necessary"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtPlanUnsupported"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/plan_unsupported"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/layContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.lorenzgorse.coopmobile.BannerView
                android:id="@+id/bannerRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_list_padding">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        android:id="@+id/blkCredit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/background2"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="8pt"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/guthaben" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="2pt">

                            <TextView
                                android:id="@+id/textCreditUnit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="2pt"
                                android:text="@string/chf" />

                            <TextView
                                android:id="@+id/textCreditValue"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingLeft="2pt"
                                android:textColor="@color/coopGreen"
                                android:textSize="25pt"
                                tools:text="4,38" />
                        </LinearLayout>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:id="@+id/consumptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
